--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -1,7 +1,13 @@
+#app
 server.port=8081
 #mongodb
 spring.data.mongodb.database=mydb
 spring.data.mongodb.uri=mongodb://root:root@localhost:27017/?authSource=admin&authMechanism=SCRAM-SHA-1
+
+#kafka
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=group_id
+spring.kafka.template.default-topic=test_topic
 
 #logging
 logging.level.org.springframework.data=debug
