--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,32 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_CREATE_TOPICS: "test_topic:1:3"
 
+  mongodb_container:
+    image: mongo:latest
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
+    ports:
+      - "27017:27017"
 
+  producer:
+    image: kafka_producer
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: 127.0.0.1:9092
+    depends_on:
+      - kafka
+
+  consumer:
+    image: kafka_consumer
+    ports:
+      - "8081:8081"
+    environment:
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: 127.0.0.1:9092
+      SPRING_DATA_MONGODB_DATABASE: mydb
+      SPRING_DATA_MONGODB_URI: mongodb://root:root@mongodb_container:27017/?authSource=admin&authMechanism=SCRAM-SHA-1
+    depends_on:
+      - mongodb_container
+      - kafka
+      - producer
