--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
+      KAFKA_ADVERTISED_HOST_NAME: "kafka"
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_CREATE_TOPICS: "test_topic:1:3"
 
@@ -26,7 +26,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_KAFKA_BOOTSTRAP_SERVERS: 127.0.0.1:9092
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     depends_on:
       - kafka
 
@@ -35,10 +35,9 @@ services:
     ports:
       - "8081:8081"
     environment:
-      SPRING_KAFKA_BOOTSTRAP_SERVERS: 127.0.0.1:9092
-      SPRING_DATA_MONGODB_DATABASE: mydb
-      SPRING_DATA_MONGODB_URI: mongodb://root:root@mongodb_container:27017/?authSource=admin&authMechanism=SCRAM-SHA-1
+     SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+     SPRING_DATA_MONGODB_DATABASE: mydb
+     SPRING_DATA_MONGODB_URI: mongodb://root:root@mongodb_container:27017/?authSource=admin&authMechanism=SCRAM-SHA-1
     depends_on:
       - mongodb_container
       - kafka
-      - producer
