Commit #4 (provided some fixes and added spring batch)

--- a/consumer/Dockerfile
+++ b/consumer/Dockerfile
@@ -1,4 +1,5 @@
-FROM amazoncorretto:11-alpine-jdk
-COPY target/consumer-0.0.1-SNAPSHOT.jar app.jar
+FROM adoptopenjdk:11-jre-hotspot
+ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} app.jar
 EXPOSE 8081
 ENTRYPOINT ["java","-jar","/app.jar"]
