--- a/producer/Dockerfile
+++ b/producer/Dockerfile
@@ -1,4 +1,5 @@
-FROM amazoncorretto:11-alpine-jdk
-COPY target/producer-0.0.1-SNAPSHOT.jar app.jar
-EXPOSE 8080
+FROM adoptopenjdk:11-jre-hotspot
+ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} app.jar
+EXPOSE 8081
 ENTRYPOINT ["java","-jar","/app.jar"]
